# blueberry-compiler

./: .gitignore  Cargo.toml  blueberry_wasm.d.ts  blueberry_wasm.js  blueberry_wasm_bg.wasm  blueberry_wasm_bg.wasm.d.ts  example.idl  index.html  package.json  rust_lalrpop_experiment.d.ts  rust_lalrpop_experiment.js  rust_lalrpop_experiment_bg.wasm  rust_lalrpop_experiment_bg.wasm.d.ts
.github/workflows/: ci.yml  release.yml
crates/ast/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/generators/c/: Cargo.toml
crates/generators/c/src/: lib.rs
crates/generators/codegen-core/src/: lib.rs  type_registry.rs
crates/generators/cpp/: Cargo.toml
crates/generators/cpp/src/: lib.rs
crates/generators/idl/: Cargo.toml
crates/generators/idl/src/: lib.rs
crates/generators/idl/tests/: idl_snapshot.rs
crates/generators/idl/tests/snapshots/: idl_snapshot__annotations.snap  idl_snapshot__blueberry_full.snap  idl_snapshot__const_folding.snap  idl_snapshot__consts.snap  idl_snapshot__enum_auto_values.snap  (+13 more)
crates/generators/python/: Cargo.toml
crates/generators/python/src/: lib.rs
crates/generators/rust/: Cargo.toml
crates/generators/rust/src/: lib.rs
crates/generators/rust/tests/: compile_generated.rs
crates/parser/src/: error.rs  grammar.lalrpop  lib.rs
crates/parser/tests/: idl_parsing.rs
crates/parser/tests/fixtures/: blueberry_full.idl  comments.idl  consts.idl  typedefs.idl
crates/serialization/: Cargo.toml
crates/serialization/src/: main.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
examples/python/: main.py  pyproject.toml
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
fixtures/: comments.idl  index.txt  integer_literals.idl  message_basic.idl  message_default.idl  struct_basic.idl
pkg/: index.html  sync_playground_fixtures.sh
src/: ast.rs  generator.rs  grammar.lalrpop  lib.rs  main.rs  wasm.rs
test/: .gitignore  README.md  generate.sh  run_tests.sh
tests/: idl_parsing.rs
tests/fixtures/: consts.idl  typedefs.idl
