[workspace]
members = [
    "crates/ast",
    "crates/cli",
    "crates/parser",
    "crates/generators/idl",
    "crates/generators/codegen-core",
    "crates/generators/c",
    "crates/generators/cpp",
    "crates/generators/python",
    "crates/generators/rust",
    "crates/wasm",
    "crates/serialization",
]

exclude = [
    "test/rust",
]

resolver = "2"
