[package]
name = "blueberry-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blueberry-parser = { path = "../parser", version = "0.1.0" }
blueberry-generator-idl = { path = "../generators/idl", version = "0.1.0" }
blueberry-codegen-core = { path = "../generators/codegen-core", version = "0.1.0" }
blueberry-generator-c = { path = "../generators/c", version = "0.1.0" }
blueberry-generator-cpp = { path = "../generators/cpp", version = "0.1.0" }
blueberry-generator-python = { path = "../generators/python", version = "0.1.0" }
blueberry-generator-rust = { path = "../generators/rust", version = "0.1.0" }
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
