[package]
name = "blueberry-generator-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
blueberry-ast = { path = "../../ast" }
blueberry-codegen-core = { path = "../codegen-core" }
proc-macro2 = "1.0"
quote = "1.0"
prettyplease = "0.2"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
blueberry-parser = { path = "../../parser", version = "0.1.0" }
tempfile = "3.10"
