[package]
name = "blueberry-generator-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
blueberry-ast = { path = "../../ast" }
blueberry-codegen-core = { path = "../codegen-core" }
genco = "0.19"

[dev-dependencies]
blueberry-parser = { path = "../../parser", version = "0.1.0" }
tempfile = "3.10"
